# quantum-llm-agent

./: .gitignore  FINDINGS.md  LICENSE  README.md  RUN_LOG.md  pyproject.toml  requirements.txt  setup.sh  setup_gpu.sh
agents/: __init__.py
agents/coordination/: quantum_agent.py
agents/memory/: quantum_memory.py
agents/reasoning/: quantum_reasoning.py
benchmarks/: __init__.py  experiment_additive_scaling.py  experiment_colab_gpu.py  run_benchmarks.py  runner.py
benchmarks/analysis/: __init__.py  statistics.py
benchmarks/results/: benchmark_report.md  benchmark_results.json
benchmarks/tasks/: __init__.py  benchmark_boolean.py  benchmark_correlated_features.py  benchmark_decision.py  benchmark_k_parity.py  benchmark_pattern.py  benchmark_sequence_decision.py
classical/: __init__.py  data.py  nn.py  tokenizer.py
classical/optimizers/: trainer.py
config/: model_configs.yaml  quantum_backends.yaml  training_configs.yaml
examples/demos/: experiment_head_to_head.py  experiment_parity.py  parity_results.json  poc_12qubit.py  scaling_demo.py  train_and_benchmark.py  train_gpu.py  train_moe.py
hybrid/: __init__.py
hybrid/attention/: moe_attention.py  quantum_attention.py
hybrid/embeddings/: hybrid_embedding.py
hybrid/feedforward/: hybrid_ff.py
hybrid/interfaces/: model.py  optimizations.py  resource_manager.py
notebooks/: quantum_gpu_scaling.ipynb  quantum_llm_colab.ipynb
quantum/: __init__.py
quantum/backends/: manager.py
quantum/circuits/: core.py
quantum/encodings/: encoders.py
quantum/gates/: layers.py
quantum/moe/: __init__.py
(+9 files in other folders)
